fix bug toggle menu contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,10 @@ header {
     margin-top: -30px;
     padding-left: 30px;
 }
-/*Menu*/    
+/*Menu*/   
+.menu label {
+    display: none
+} 
 .menu {
     letter-spacing: 1px;
     margin-right: -30%;
@@ -953,6 +956,9 @@ input[type=reset] {
 
 @media screen and (max-width:1150px) {
     /* burger menu */
+    .menu label {
+        display:block
+    }
     .wrapper {
     position: fixed;
     top: 42px;
@@ -984,13 +990,13 @@ input[type=reset] {
     line-height: 50px;
     border-radius: 30%;
     font-size: 30px;
-    color: #f2f2f2;
+    color: #000000;
     font-weight: 500;
     cursor: pointer;
     /*background: linear-gradient(-135deg, #c850c0, #4158d0);*/
     /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
     /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%); */
-    background: #474747;
+    background: #ffffff;
     transition: all 0.3s ease-in-out;
     }
     .menu-btn span {
